<resources>
    <string name="app_name">Barricade Plan</string>
    <string name="products">Products</string>
    <string name="events">Events</string>
    <string name="calculate">Calculate</string>
  <string name="single_barrier_calculator">Single Barricade-Type Calculator</string>
  <string name="multi_barrier_calculator">Multiple Barricade-Types Calculator</string>
  <string name="length_needed">Length Needed = </string>
  <string name="feet">lft</string>
  <string name="linear_feet">Linear Feet (lft)</string>
  <string name="linear_meters">Linear Meters (lm)</string>
  <string name="result">Result</string>
  <string name="zero">0</string>
  <string name="barriers">Barricades</string>
  <string name="remainder">Remainder</string>
  <string name="add_barrier_type">Add a Barricade Type</string>
  <string name="barrier_plan">Barricade Planner</string>
  <string name="metric">Units</string>
  <string name="contact">Contact</string>
  <string name="choose_units">Choose the units</string>
  <string name="meters">lm</string>
  <string name="select_barrier_type">Select Barricade Type</string>
  <string name="custom_barrier_type">Custom Barricade Type</string>
  <string name="length">Length</string>
  <string name="name">Name</string>
  <string name="custom">Custom</string>
  <string name="total_length">Total Length</string>
  <string name="total_barriers">Barricades</string>
  <string name="Length">Length:</string>
  <string name="height">Height:</string>
  <string name="weight">Weight</string>
  <string name="load">Accepted Load:</string>
  <string name="resistance">Thermal Resistance:</string>
  <string name="handling">Shipping and Handling:</string>
  <string name="available_colors">Available Colors:</string>
  <string name="check_us_out">Check us out at</string>
  <string name="contact_us">Contact us at</string>
  <string name="phone_number">800-281-5229</string>
  <string name="email">mlr@mlrinternational.com</string>
  <string name="link">www.mlrinternational.com</string>
  <string name="movit_description">Movit Product Description</string>
  <string name="minit_description">Minit Product Description</string>
  <string name="xtendit_description">Xtendit Product Description</string>
  <string name="multi_gate_description">Multi-Gate Product Description</string>
  <string name="save_event">Save Event</string>
  <string name="event_name">Event Name</string>
  <string name="date">Event Date</string>
  <string name="date_picker">Select Date</string>
  <string name="SAVE">SAVE</string>
  <string name="cancel">CANCEL</string>
  <string name="event_history">Event History</string>
  <string name="event_details">Event Details</string>
  <string name="event_details_format">Event Details for %1$s</string>
  <string name="sort_by">Sort By:</string>
  <string name="details_content">%1$s, %2$s pcs, %3$s feet</string>
  <string name="movit">Movit</string>
  <string name="minit">Minit</string>
  <string name="xtendit">Xtendit</string>
</resources>
