<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/save_event"
      android:textSize="@dimen/text_size_20sp"
      />

  <TableLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >
    <TableRow
        android:layout_gravity="center"
        android:gravity="center"
        >
      <TextView
          android:layout_marginRight="@dimen/spacing_4dp"
          android:text="@string/event_name"
          />
      <EditText
          android:id="@+id/event_name"
          android:layout_width="@dimen/spacing_100dp"
          />
    </TableRow>
    <TableRow
        android:gravity="center">
      <TextView
          android:text="@string/date"
          />

      <Button
          android:id="@+id/date_picker"
          android:text="@string/date_picker"
          />
    </TableRow>
  </TableLayout>
  <TextView
      android:id="@+id/selected_date"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      />
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:paddingBottom="@dimen/spacing_16dp"
      >
    <TextView
        android:id="@+id/save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/SAVE"
        />
    <TextView
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/cancel"
        />
  </LinearLayout>
</LinearLayout>