<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/spacing_4dp">
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/contact"
      android:textSize="@dimen/text_size_20sp"
      android:gravity="center"
      android:paddingTop="@dimen/spacing_4dp"
      android:paddingBottom="@dimen/spacing_4dp"
      />
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/check_us_out"
      android:gravity="center"
      android:paddingTop="@dimen/spacing_4dp"
      android:paddingBottom="@dimen/spacing_4dp"
      />
  <TextView
      android:id="@+id/link"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:paddingTop="@dimen/spacing_4dp"
      android:paddingBottom="@dimen/spacing_4dp"
      android:text="@string/link"
      android:autoLink="web"
      />
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/contact_us"
      android:gravity="center"
      android:paddingTop="@dimen/spacing_4dp"
      android:paddingBottom="@dimen/spacing_4dp"
      />
  <TextView
      android:id="@+id/phone_link"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/phone_number"
      android:gravity="center"
      android:paddingTop="@dimen/spacing_4dp"
      android:paddingBottom="@dimen/spacing_4dp"
      android:autoLink="phone"
      />
  <TextView
      android:id="@+id/email_link"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/email"
      android:gravity="center"
      android:paddingTop="@dimen/spacing_4dp"
      android:paddingBottom="@dimen/spacing_4dp"
      android:autoLink="email"
      />
</LinearLayout>