<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/single_barrier_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/spacing_16dp"
    android:layout_marginLeft="@dimen/spacing_4dp"
    android:layout_marginRight="@dimen/spacing_4dp"
    android:background="@drawable/card_background"
    app:cardCornerRadius="@dimen/cardview_default_radius"
    >
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >
    <TextView
        android:id="@+id/single_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:drawableRight="@drawable/ic_save_white_24dp"
        android:gravity="center"
        android:paddingBottom="@dimen/spacing_8dp"
        android:text="@string/single_barrier_calculator"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_24sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        >
      <TextView
          android:id="@+id/btn_movit"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:background="@drawable/selected_logo"
          android:gravity="center"
          android:text="@string/movit"
          android:textSize="@dimen/text_size_20sp"
          />
      <View
          android:layout_width="1dp"
          android:layout_height="match_parent"
          android:background="@color/gray"
          />
      <TextView
          android:id="@+id/btn_minit"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="center"
          android:text="@string/minit"
          android:textSize="@dimen/text_size_20sp"
          />
      <View
          android:layout_width="1dp"
          android:layout_height="match_parent"
          android:background="@color/gray"
          />
      <TextView
          android:id="@+id/btn_xtendit"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="center"
          android:text="@string/xtendit"
          android:textSize="@dimen/text_size_20sp"
          />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:paddingBottom="@dimen/spacing_8dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/spacing_4dp"
          android:text="@string/length_needed"
          android:textSize="@dimen/text_size_18sp"
          />
      <android.support.design.widget.TextInputLayout
          android:layout_width="@dimen/length_entry_text"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_entry_length_needed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/length"
            android:inputType="number"
            />
      </android.support.design.widget.TextInputLayout>
      <TextView
          android:id="@+id/unit"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/spacing_4dp"
          android:text="@string/feet"
          android:textSize="@dimen/text_size_18sp"
          />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/spacing_4dp"
        android:text="@string/result"
        android:textSize="@dimen/text_size_18sp"
        android:textStyle="italic"

        />
    <include
        layout="@layout/content_calculator_result"
        android:id="@+id/single_barrier_result"
        />
  </LinearLayout>
</android.support.v7.widget.CardView>