<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:paddingBottom="@dimen/spacing_8dp"
      android:paddingTop="@dimen/spacing_8dp"
      android:text="@string/custom_barrier_type"
      android:textSize="@dimen/text_size_20sp"
      />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >

    <EditText
        android:id="@+id/entry_name"
        android:layout_width="@dimen/spacing_200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/spacing_40dp"
        android:hint="@string/name"
        />

    <EditText
        android:id="@+id/entry_length"
        android:layout_width="@dimen/spacing_200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/spacing_40dp"
        android:hint="@string/length"
        android:inputType="numberDecimal"
        />

    <TextView
        android:id="@+id/unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/feet"
        />
  </LinearLayout>


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:paddingBottom="@dimen/spacing_8dp"
      android:paddingTop="@dimen/spacing_8dp"
      >
    <TextView
        android:id="@+id/btn_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@android:string/ok"
        />
    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@android:string/cancel"
        />

  </LinearLayout>

</LinearLayout>