<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
  <TableRow
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >
    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/text_size_24sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/remainder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/text_size_24sp"
        android:textStyle="bold"
        />
  </TableRow>
  <TableRow
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/barriers"
        android:textSize="@dimen/text_size_18sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/remainder"
        android:textSize="@dimen/text_size_18sp"
        />
  </TableRow>
</TableLayout>