<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      >
    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing_56dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/spacing_4dp"
        android:layout_weight="1"
        >
      <FrameLayout
          android:id="@+id/btn_movit"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="@color/gray"
          >
        <ImageView
            android:layout_width="@dimen/spacing_100dp"
            android:layout_height="@dimen/spacing_40dp"
            android:layout_gravity="center"
            android:src="@drawable/movit_logo"
            />
      </FrameLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing_56dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/spacing_4dp"
        android:layout_weight="1"
        >
      <FrameLayout
          android:id="@+id/btn_minit"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          >
        <ImageView
            android:layout_width="@dimen/spacing_100dp"
            android:layout_height="@dimen/spacing_40dp"
            android:layout_gravity="center"
            android:src="@drawable/minit_logo"
            />
      </FrameLayout>
    </android.support.v7.widget.CardView>
  </LinearLayout>

  <android.support.v4.view.ViewPager
      android:id="@+id/pager"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      />


  <android.support.v7.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/spacing_4dp"
      android:background="@drawable/card_background"
      app:cardCornerRadius="@dimen/cardview_default_radius"
      >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
      <TextView
          android:id="@+id/description_title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@color/colorPrimary"
          android:gravity="center"
          android:textColor="@color/colorWhite"
          />
      <TableLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/spacing_4dp"
          >
        <TableRow>
          <TextView
              android:text="@string/Length"
              android:textStyle="bold"
              />
          <TextView
              android:id="@+id/length"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="@dimen/text_size_2sp"
              />
        </TableRow>
        <TableRow>
          <TextView
              android:text="@string/height"
              android:textStyle="bold"
              />
          <TextView
              android:id="@+id/height"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="@dimen/text_size_2sp"
              />
        </TableRow>
        <TableRow>
          <TextView
              android:text="@string/weight"
              android:textStyle="bold"
              />
          <TextView
              android:id="@+id/weight"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="@dimen/text_size_2sp"
              />
        </TableRow>
        <TableRow>
          <TextView
              android:text="@string/load"
              android:textStyle="bold"
              />
          <TextView
              android:id="@+id/load"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="@dimen/text_size_2sp"
              />
        </TableRow>
        <TableRow>
          <TextView
              android:text="@string/resistance"
              android:textStyle="bold"
              />
          <TextView
              android:id="@+id/resistance"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="@dimen/text_size_2sp"
              />
        </TableRow>
        <TableRow>
          <TextView
              android:text="@string/handling"
              android:textStyle="bold"
              />
          <TextView
              android:id="@+id/handling"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="@dimen/text_size_2sp"
              />
        </TableRow>
      </TableLayout>
    </LinearLayout>
  </android.support.v7.widget.CardView>
</LinearLayout>