<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    >
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:paddingTop="@dimen/spacing_16dp"
      >
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_4dp"
        android:layout_marginRight="@dimen/spacing_4dp"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:cardElevation="@dimen/cardview_default_elevation"
        >
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/event_history"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_20sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            >
          <TextView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:gravity="center"
              android:text="@string/sort_by"
              android:textColor="@color/colorWhite"
              />
          <android.support.v7.widget.AppCompatSpinner
              android:id="@+id/sort"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              />
        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/event_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
      </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_4dp"
        android:layout_marginRight="@dimen/spacing_4dp"
        android:layout_marginTop="@dimen/spacing_16dp"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:cardElevation="@dimen/cardview_default_elevation"
        >
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          >
        <TextView
            android:id="@+id/event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/event_details"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_20sp"
            />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/event_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
      </LinearLayout>
    </android.support.v7.widget.CardView>
  </LinearLayout>
</ScrollView>